MEFA VERSIONS

TODO:

    * DOLINA data sets: reworked
    * vignette: added to inst/doc.
    * Makefile: added to inst/doc.


Version 2.0-2 -- November 8, 2008 (opened - r???)

    * print.mefa: returns segment names to avoid confusion
    when all other details are the same.
    * mefaTables: xtab.fixed argument now works properly.
    * stcs: argument zero.pseudo now accepts a two element
    vector for species and segments, respectively.
    * summary.mefa: returns list with different names
    for [1:4] elements due to consistency with
    samples/taxa sides: s.rich, s.abu, t.occ, t.abu,
    and these are used in the print.summary method, too.
    Accordingly, the class has now a call attribute to
    return it by the summary.
    * help pages: lots of minor improvements.
    * R code: annotated with comments.
    * summary.stcs: returns same info as summary.mefa,
    but print.stcs remained the default data frame method.
    * plot, boxplot, image methods for stcs: also added
    for avoiding the use of calls like plot(mefa(x)).


Version 2.0-1 -- November 8, 2008 (closed - r205)

    * extract.mefa: now accepts negative indexing
      for exclusion (not as character).
    * extract.mefa: column extraction bug fixed
    * type arg of plot.mefa: "hist" replaced by "bar"


Version 2.0-0 -- September 29, 2008 (closed - r200)

    * The package was extensively rewritten
      (started on September 16, 2008).
      It is more easy and efficient than
      < 2.0 versions. The number of object
      classes reduced. The new class stcs
      is almost equivalent to the old sscount.
      The new class mefa can be used either
      as the old xcount and mefa classes
      (and the xclist and mflist classes
      only provided with the undocumented
      patch file). The old xorder class
      is bow useless, too.
    * New methods are provided for manipulating
      pbjects. The "[.mefa" replaces the old
      exclmf function, the aggregate method